<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_round_corner_area_white_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_10"
            android:gravity="center_horizontal"
            android:text="@string/tips"
            android:textColor="#000000"
            android:textSize="@dimen/text_size_18"/>

        <TextView
            android:id="@+id/tvTips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_15"
            android:layout_marginLeft="@dimen/margin_10"
            android:layout_marginRight="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_10"
            android:gravity="left"
            android:text="@string/current_cellular_network"
            android:textColor="#3E434A"
            android:textSize="@dimen/text_size_18"/>

        <View
            style="@style/DividerHorizontalStyle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvCancle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:padding="7dp"
                android:text="@string/cancel"
                android:textColor="#838383"
                android:textSize="20sp"/>

            <View
                style="@style/DividerVerticalStyle"/>

            <TextView
                android:id="@+id/tvSure"
                style="@style/OrangeTextStyle"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:padding="7dp"
                android:text="@string/go_on"
                android:textSize="20sp"/>
        </LinearLayout>

    </LinearLayout>
</layout>