<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF333333"
        android:orientation="vertical">
        <Button
            android:id="@+id/btnTakePicture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/take_picture"
            android:textColor="@drawable/selector_text_color_normal"
            android:textSize="16sp"/>
        <Button
            android:id="@+id/btnLocalImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnTakePicture"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/local_image"
            android:textColor="@drawable/selector_text_color_normal"
            android:textSize="16sp"/>
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnLocalImage"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textColor="@drawable/selector_text_color_normal"
            android:textSize="16sp"/>
    </LinearLayout>
</layout>