<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="@dimen/margin_10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_white"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                style="@style/FixHeightTextStyle"
                android:layout_width="@dimen/margin_80"
                android:layout_marginLeft="@dimen/margin_15"
                android:clickable="true"
                android:gravity="center_vertical"
                android:text="@string/refund_reason"
                android:textSize="@dimen/text_size_16" />

            <com.hailan.HaiLanPrint.views.ClearEditText
                android:id="@+id/cetConsignee"
                style="@style/FixHeightTextStyle"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:drawablePadding="@dimen/margin_8"
                android:hint="@string/select_refund_reason"
                android:longClickable="false"
                android:textSize="@dimen/text_size_16" />

        </LinearLayout>

        <View style="@style/DividerHorizontalMarginSytle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_white"
            android:orientation="horizontal">

            <TextView
                style="@style/FixHeightTextStyle"
                android:layout_width="@dimen/margin_80"
                android:layout_marginLeft="@dimen/margin_15"
                android:clickable="true"
                android:gravity="center_vertical"
                android:text="@string/refund_amount"
                android:textSize="@dimen/text_size_16" />

            <com.hailan.HaiLanPrint.views.ClearEditText
                android:id="@+id/cetRefundFee"
                style="@style/FixHeightTextStyle"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:drawablePadding="@dimen/margin_8"
                android:hint="@string/at_most_yuan"
                android:inputType="numberDecimal"
                android:textSize="@dimen/text_size_16" />

        </LinearLayout>

        <View style="@style/DividerHorizontalMarginSytle" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDetailedAdress"
                style="@style/FixHeightTextStyle"
                android:layout_width="@dimen/margin_80"
                android:layout_marginLeft="@dimen/margin_15"
                android:clickable="true"
                android:gravity="center_vertical"
                android:text="@string/refund_detail"
                android:textSize="@dimen/text_size_16" />

            <EditText
                android:id="@+id/etRefundReason"
                style="@style/FixHeightTextStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_88"
                android:layout_toRightOf="@+id/tvDetailedAdress"
                android:background="@null"
                android:maxLength="200"
                android:drawablePadding="@dimen/margin_8"
                android:gravity="top|left"
                android:hint="@string/input_refund_detail"
                android:inputType="textMultiLine"
                android:longClickable="false"
                android:paddingTop="@dimen/margin_12"
                android:scrollbars="vertical"
                android:textSize="@dimen/text_size_16" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:background="@color/color_white"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/margin_15"
            android:paddingTop="@dimen/margin_15">

            <TextView
                android:id="@+id/tvUploadImage"
                style="@style/NormalTextStyle"
                android:layout_width="@dimen/margin_80"
                android:layout_marginLeft="@dimen/margin_15"
                android:clickable="true"
                android:gravity="center_vertical"
                android:text="@string/upload_image"
                android:textSize="@dimen/text_size_16" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_88"
                android:layout_marginRight="@dimen/margin_8"
                android:layout_toRightOf="@+id/tvUploadImage" />

        </RelativeLayout>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/size_44"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_32"
            android:background="@drawable/ripple_button_round_angle_orange"
            android:gravity="center"
            android:onClick="sumitAction"
            android:paddingLeft="@dimen/margin_36"
            android:paddingRight="@dimen/margin_36"
            android:text="@string/submit_refund_application"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text_size_18" />

    </LinearLayout>
</layout>